@@ -1,5 +1,5 @@
 /*
- * "$Id: cupsd.h,v 1.28.2.18 2003/03/31 16:48:27 mike Exp $"
+ * "$Id: cupsd.h,v 1.28.2.19 2003/04/10 20:15:52 mike Exp $"
  *
  *   Main header file for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -168,6 +168,15 @@ typedef struct direct DIRENT;
 
 
 /*
+ * Reload types...
+ */
+
+#define RELOAD_NONE	0		/* No reload needed */
+#define RELOAD_ALL	1		/* Reload everything */
+#define RELOAD_CUPSD	2		/* Reload only cupsd.conf */
+
+
+/*
  * Globals...
  */
 
@@ -176,7 +185,7 @@ VAR int			MaxFDs,		/* Maximum number of files */
 VAR fd_set		*InputSet,	/* Input files for select() */
 			*OutputSet;	/* Output files for select() */
 
-VAR int			NeedReload	VALUE(TRUE);
+VAR int			NeedReload	VALUE(RELOAD_ALL);
 					/* Need to load configuration? */
 VAR char		*TZ		VALUE(NULL);
 					/* Timezone configuration */
@@ -205,5 +214,5 @@ extern void	StopServer(void);
 
 
 /*
- * End of "$Id: cupsd.h,v 1.28.2.18 2003/03/31 16:48:27 mike Exp $".
+ * End of "$Id: cupsd.h,v 1.28.2.19 2003/04/10 20:15:52 mike Exp $".
  */
